<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:text="@string/invite_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGenerateCode"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:backgroundTint="#82FF73"
        android:text="@string/generate_code"
        android:textColor="#616161" />

    <Button
        android:id="@+id/btnGenerateLink"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#82FF73"
        android:text="@string/generate_link"
        android:textColor="#616161" />
</LinearLayout>
